--- a/vue_basic/07_事件处理/2.事件修饰符.html
+++ b/vue_basic/07_事件处理/2.事件修饰符.html
@@ -33,6 +33,10 @@
 		</style>
 	</head>
 	<body>
+<!--		事件捕获在事件冒泡前面-->
+<!--		正常事件处理是在冒泡端-->
+<!--		事件捕获的触发是从外到内-->
+<!--		事件冒泡的触发是从内到外-->
 		<!-- 
 				Vue中的事件修饰符：
 						1.prevent：阻止默认事件（常用）；
