--- a/vue_basic/07_事件处理/3.键盘事件.html
+++ b/vue_basic/07_事件处理/3.键盘事件.html
@@ -7,7 +7,7 @@
 		<script type="text/javascript" src="../js/vue.js"></script>
 	</head>
 	<body>
-		<!-- 
+		<!--    keyup
 				1.Vue中常用的按键别名：
 							回车 => enter
 							删除 => delete (捕获“删除”和“退格”键)
