--- a/vue_basic/06_数据代理/1.回顾Object.defineProperty方法.html
+++ b/vue_basic/06_数据代理/1.回顾Object.defineProperty方法.html
@@ -12,28 +12,22 @@
 				sex:'男',
 			}
 
-			Object.defineProperty(person,'age',{
-				// value:18,
-				// enumerable:true, //控制属性是否可以枚举，默认值是false
-				// writable:true, //控制属性是否可以被修改，默认值是false
-				// configurable:true //控制属性是否可以被删除，默认值是false
-
-				//当有人读取person的age属性时，get函数(getter)就会被调用，且返回值就是age的值
-				get(){
-					console.log('有人读取age属性了')
-					return number
+			Object.defineProperty(person, 'age', {
+				value: 20,
+				configurable: true, // 控制属性是否可以被删除，默认是false
+				enumerable: true, // 控制属性是否可以枚举，默认为false
+				writable: true, // 控制是否可以被修改，默认是false
+				// 当有人读取person的age属性时，get函数就会被调用，且返回值就是age的值
+				get() {
+					return number;
 				},
-
-				//当有人修改person的age属性时，set函数(setter)就会被调用，且会收到修改的具体值
-				set(value){
-					console.log('有人修改了age属性，且值是',value)
-					number = value
+				// 当有人修改person的age属性时，set函数就会被调用，且会收到修改后具体的值
+				set(value) {
+					number = value;
+					console.log('有人修改age属性，且值是', value)
 				}
-
 			})
-
-			// console.log(Object.keys(person))
-
+			console.log(Object.keys(person))
 			console.log(person)
 		</script>
 	</body>
