--- a/vue_basic/07_事件处理/2.事件修饰符.html
+++ b/vue_basic/07_事件处理/2.事件修饰符.html
@@ -34,7 +34,7 @@
 	</head>
 	<body>
 <!--		事件捕获在事件冒泡前面-->
-<!--		正常事件处理是在冒泡端-->
+<!--		正常事件处理是在冒泡阶段-->
 <!--		事件捕获的触发是从外到内-->
 <!--		事件冒泡的触发是从内到外-->
 		<!-- 
