--- a/vue_basic/12_列表渲染/6.Vue监测数据改变的原理_对象.html
+++ b/vue_basic/12_列表渲染/6.Vue监测数据改变的原理_对象.html
@@ -16,7 +16,8 @@
 
 	<script type="text/javascript">
 		Vue.config.productionTip = false //阻止 vue 在启动时生成生产提示。
-
+		// 属性值改变调用set方法，然后重新渲染模板，然后重新生成虚拟dom，
+		// 然后diff算法虚拟dom对比,然后更新页面
 		const vm = new Vue({
 			el:'#root',
 			data:{
